🚧 The readability of gnb and gnb-nav codes has been enhanced and the wrong code has been corrected

--- a/styles/components/_gnb-nav.scss
+++ b/styles/components/_gnb-nav.scss
@@ -1,16 +1,21 @@
 .gnb-nav {
+  $nav-link-padding: 8px;
+
   &-list {
     @include flexbox(start);
+    margin-left: -#{$nav-link-padding};
   }
 
   &-item {
-    margin-right: 24px;
+    margin-right: 24px - ($nav-link-padding * 2);
 
     &:last-child {
       margin-right: 0;
     }
 
-    &.is-active {
+    &.is-active,
+    &:active,
+    &:hover {
       a {
         color: $blue;
       }
@@ -18,13 +23,10 @@
 
     a {
       @include text-style(18, $primary);
+      display: block;
+      padding: $nav-link-padding;
       font-weight: 700;
       transition: color 200ms ease-in-out;
-
-      &:hover,
-      &:active {
-        color: $blue;
-      }
     }
   }
 }
